--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "typescript-eslint": "^8.48.0"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "zod": "^4.1.13"
